<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              tools:context="com.andre.store.view.AdditionalStore">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/red100"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/max"/>

                <View android:layout_width="match_parent"
                      android:layout_height="2dp"
                      style="?attr/dividerHorizontal"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/imageEdit"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/red100"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/editStore"/>

                <View android:layout_width="match_parent"
                      android:layout_height="2dp"
                      style="?attr/dividerHorizontal"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/store_edit"
                          android:textColorHint="@color/black"
                          android:hint="@string/storeName"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
                          android:id="@+id/address_edit"
                          android:hint="@string/address"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
                          android:inputType="phone"
                          android:id="@+id/phone_edit"
                          android:hint="@string/phone"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textEmailAddress"
                          android:id="@+id/email_edit"
                          android:textColorHint="@color/black"
                          android:hint="@string/email"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/red100"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/change_category"/>

                <View android:layout_width="match_parent"
                      android:layout_height="2dp"
                      style="?attr/dividerHorizontal"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/old"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/oldCategory"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/newCat"/>
                <Spinner android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/spinner_category"></Spinner>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"></LinearLayout>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_buttonEdit"
                    android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


