<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.andre.store.view.AdditionalStore">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/red100"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/max"/>

                <View android:layout_width="match_parent"
                      android:layout_height="2dp"
                      style="?attr/dividerHorizontal"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/imageStore"/>

                <!--<GridView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/picture_store"
                          android:numColumns="3"
                          android:stretchMode="columnWidth"></GridView>-->
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/red100"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/input_store"/>

                <View android:layout_width="match_parent"
                      android:layout_height="2dp"
                      style="?attr/dividerHorizontal"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/store_name"
                          android:textColorHint="@color/black"
                          android:hint="@string/storeName"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
                          android:id="@+id/address_store"
                          android:hint="@string/address"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
                          android:inputType="phone"
                          android:id="@+id/phone_store"
                          android:hint="@string/phone"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textEmailAddress"
                          android:id="@+id/email_store"
                          android:textColorHint="@color/black"
                          android:hint="@string/email"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/red100"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/input_category"/>

                <View android:layout_width="match_parent"
                      android:layout_height="2dp"
                      style="?attr/dividerHorizontal"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <Spinner android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/spinner_category"></Spinner>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/red100"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/input_position"/>

                <View android:layout_width="match_parent"
                      android:layout_height="2dp"
                      style="?attr/dividerHorizontal"/>
            </LinearLayout>


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/name_employee"
                          android:textColorHint="@color/black"
                          android:hint="@string/name_employee"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textColorHint="@color/black"
                          android:id="@+id/position_employee"
                          android:hint="@string/position"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/phone_employee"
                          android:textColorHint="@color/black"
                          android:inputType="phone"
                          android:hint="@string/phone"/>
                <Button android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/save_button"
                        android:text="@string/save"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>


