<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.andre.store.view.Order">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Button android:layout_width="wrap_content"
                android:text="@string/qrCode"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:id="@+id/qrCode"/>
        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:hint="@string/search"
                  android:id="@+id/search"
                  android:layout_weight="1"/>
        <Button android:layout_width="@dimen/widthIcon"
                android:layout_height="@dimen/heightIcon"
                android:background="@drawable/search"
                android:id="@+id/btnSearch"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">
        <ListView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:descendantFocusability="blocksDescendants"
                  android:id="@+id/orderStore"></ListView>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/lightGreen100"
                  android:orientation="horizontal">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textColor="@color/black"
                android:id="@+id/btnOrder"/>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/black"
                          android:text="@string/quantityTotal"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/quantityItem"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/priceTotal"
                          android:textColor="@color/black"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/totalItem"/>
            </LinearLayout>
        </LinearLayout>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:id="@+id/summaryOrder"/>
    </LinearLayout>

</LinearLayout>
