<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/red100"
              android:layout_gravity="center"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="com.andre.store.view.LoginActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:hint="@string/user"
                android:background="#FFFFFF"
                android:ems="10"
                android:id="@+id/userName"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@color/red100"
                      android:orientation="vertical">

            <View android:layout_width="match_parent"
                  android:layout_height="5dp"
                  style="?attr/dividerHorizontal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:background="#FFFFFF"
                android:hint="@string/pass"
                android:ems="10"
                android:id="@+id/password"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@color/red100"
                      android:orientation="vertical">

            <View android:layout_width="match_parent"
                  android:layout_height="5dp"
                  style="?attr/dividerHorizontal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/button_login"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="right">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register"
                android:id="@+id/register"
                android:textColor="@color/blue"/>
    </LinearLayout>
</LinearLayout>
