<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              tools:context="com.andre.store.view.SummaryOrder">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1">
        <ListView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/listSummary"></ListView>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="bottom"
                  android:background="@color/lightGreen100"
                  android:orientation="horizontal">
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/black"
                          android:text="@string/quantityTotal"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/quantityItemSummary"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/priceTotal"
                          android:textColor="@color/black"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/totalItemSummary"/>
            </LinearLayout>
        </LinearLayout>

        <Button android:layout_width="@dimen/widthIcon"
                android:layout_height="@dimen/heightIcon"
                android:text="@string/buy"
                android:textColor="@color/black"
                android:id="@+id/buyItem"/>

    </LinearLayout>

</LinearLayout>

